Fix: overflow in modal menu

--- a/css/style.css
+++ b/css/style.css
@@ -1899,6 +1899,7 @@ img {
   opacity: 0;
   -webkit-transition: opacity 0.2s;
   transition: opacity 0.2s;
+  overflow: auto;
 }
 
 .modal__dialog--visible {
